Add BD_ANDROID_SDK_PLACEHOLDER and BD_HOME_PLACEHOLDER
Use them to replace hardcode directory, and replace them with real
home/android sdk directory when configuration.

Signed-off-by: utzcoz <utzcoz@outlook.com>

--- a/bd-10/boringdroid_10.avd/hardware-qemu.ini
+++ b/bd-10/boringdroid_10.avd/hardware-qemu.ini
@@ -17,9 +17,9 @@ hw.gyroscope = true
 hw.audioInput = true
 hw.audioOutput = true
 hw.sdCard = true
-hw.sdCard.path = /home/dev/.android/avd/boringdroid_10.avd/sdcard.img
+hw.sdCard.path = BD_HOME_PLACEHOLDER/.android/avd/boringdroid_10.avd/sdcard.img
 disk.cachePartition = true
-disk.cachePartition.path = /home/dev/.android/avd/boringdroid_10.avd/cache.img
+disk.cachePartition.path = BD_HOME_PLACEHOLDER/.android/avd/boringdroid_10.avd/cache.img
 disk.cachePartition.size = 66m
 test.quitAfterBootTimeOut = -1
 test.delayAdbTillBootComplete = 0
@@ -80,20 +80,20 @@ hw.sensor.hinge.fold_to_displayRegion.0.1_at_posture = 1
 hw.useext4 = true
 hw.arc = false
 hw.arc.autologin = false
-kernel.path = /home/dev/Android/Sdk/system-images/android-29/default/x86_64//kernel-ranchu
+kernel.path = BD_ANDROID_SDK_PLACEHOLDER/system-images/android-29/default/x86_64//kernel-ranchu
 kernel.newDeviceNaming = yes
 kernel.supportsYaffs2 = no
-disk.ramdisk.path = /home/dev/Android/Sdk/system-images/android-29/default/x86_64//ramdisk.img
-disk.systemPartition.initPath = /home/dev/Android/Sdk/system-images/android-29/default/x86_64//system.img
+disk.ramdisk.path = BD_ANDROID_SDK_PLACEHOLDER/system-images/android-29/default/x86_64//ramdisk.img
+disk.systemPartition.initPath = BD_ANDROID_SDK_PLACEHOLDER/system-images/android-29/default/x86_64//system.img
 disk.systemPartition.size = 3083m
-disk.vendorPartition.initPath = /home/dev/Android/Sdk/system-images/android-29/default/x86_64//vendor.img
+disk.vendorPartition.initPath = BD_ANDROID_SDK_PLACEHOLDER/system-images/android-29/default/x86_64//vendor.img
 disk.vendorPartition.size = 800m
-disk.dataPartition.path = /home/dev/.android/avd/boringdroid_10.avd/userdata-qemu.img
+disk.dataPartition.path = BD_HOME_PLACEHOLDER/.android/avd/boringdroid_10.avd/userdata-qemu.img
 disk.dataPartition.size = 800m
-disk.encryptionKeyPartition.path = /home/dev/.android/avd/boringdroid_10.avd/encryptionkey.img
+disk.encryptionKeyPartition.path = BD_HOME_PLACEHOLDER/.android/avd/boringdroid_10.avd/encryptionkey.img
 PlayStore.enabled = false
 avd.name = boringdroid_10
 avd.id = boringdroid_10
 fastboot.forceColdBoot = false
-android.sdk.root = /home/dev/Android/Sdk
-android.avd.home = /home/dev/.android/avd
+android.sdk.root = BD_ANDROID_SDK_PLACEHOLDER
+android.avd.home = BD_HOME_PLACEHOLDER/.android/avd
