--- a/bd-10/boringdroid_10.ini
+++ b/bd-10/boringdroid_10.ini
@@ -1,4 +1,4 @@
 avd.ini.encoding=UTF-8
-path=/home/dev/.android/avd/boringdroid_10.avd
+path=BD_HOME_PLACEHOLDER/.android/avd/boringdroid_10.avd
 path.rel=avd/bornigdroid_10.avd
 target=android-29
