Update for Android 11 and Android-Generic integration

--- a/ag-11/ag_11.avd/config.ini
+++ b/ag-11/ag_11.avd/config.ini
@@ -1,7 +1,7 @@
-AvdId=boringdroid_10
+AvdId=ag_11
 PlayStore.enabled=false
 abi.type=x86_64
-avd.ini.displayname=Boringdroid 10
+avd.ini.displayname=AG 11
 avd.ini.encoding=UTF-8
 disk.dataPartition.size=800M
 fastboot.chosenSnapshotFile=
@@ -41,7 +41,7 @@ sdcard.size=512M
 showDeviceFrame=yes
 skin.dynamic=yes
 skin.name=pixel_c
-skin.path=BD_ANDROID_SDK_PLACEHOLDER/skins/pixel_c
+skin.path=AG_ANDROID_SDK_PLACEHOLDER/skins/pixel_c
 tag.display=Default Android System Image
 tag.id=default
 vm.heapSize=192
