--- a/ag-11/source.properties
+++ b/ag-11/source.properties
@@ -1,4 +1,4 @@
-Pkg.Desc=Boringdroid Android SDK System Image
+Pkg.Desc=Android-Generic Android SDK System Image
 Pkg.UserSrc=false
 Pkg.Revision=6
 Pkg.Dependencies=emulator#28.1.9
@@ -6,4 +6,4 @@ AndroidVersion.ApiLevel=29
 SystemImage.Abi=x86_64
 SystemImage.GpuSupport=true
 SystemImage.TagId=default
-SystemImage.TagDisplay=Boringdroid Android System Image
+SystemImage.TagDisplay=Android-Generic System Image
